--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,8 @@ setw -g pane-base-index 1
 #set -g mouse-window-window on
 
 # Splitting panes
-bind - split-window -h
+bind v split-window -h
+bind s split-window -v
 bind t split-window -p 15
 bind T split-window -h -p 30
 
@@ -80,20 +81,12 @@ set -g status-justify centre
 # enable vi keys.
 setw -g mode-keys vi
 
-# Vim/tmux navigator
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
 
-# Smart pane switching with awareness of vim splits
-bind -n C-k run-shell 'tmux-vim-select-pane -U'
-bind -n C-j run-shell 'tmux-vim-select-pane -D'
-bind -n C-h run-shell 'tmux-vim-select-pane -L'
-bind -n C-l run-shell 'tmux-vim-select-pane -R'
-bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
-
-# Bring back clear screen under tmux prefix
-bind C-l send-keys 'C-l'
+# smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
