set utf8 to be used

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 # Terminal colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+
+# Fixes the problem with Vim/Tmux rendering
+set-window-option -g utf8 on
 
 # Set new binding
 set -g prefix C-a
